# gnome-music

./: .buildconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  AUTHORS.in  CONTRIBUTING.md  COPYING  LICENSE  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.md  autogen.sh  ci_build.sh  ci_pep8.sh  ci_pyflakes.sh  ci_tarball.sh  config.h.in  configure.ac  gnome-music.doap  gnome-music.in  localsearch-gexiv-fail.patch  meson.build  meson_options.txt  meson_post_conf.py  meson_post_install.py  org.gnome.Music.json  widgets.py
_build/: build.ninja  compile_commands.json  local-music
data/: AboutDialog.ui  AboutDialog.ui.in  AlbumCover.ui  AlbumWidget.ui  ArtistAlbumWidget.ui  ArtistAlbumsWidget.ui  DiscBox.ui  DropDown.ui  EmptyView.ui  FilterView.ui  HeaderBar.ui  Headerbar.ui  Makefile.am  Makefile.in  NoMusic.ui  PlaybackPopover.ui  PlayerToolbar.ui  PlaylistContextMenu.ui  PlaylistControls.ui  PlaylistDialog.ui  PlaylistDialog.ui.in  SelectionBarMenuButton.ui  SelectionToolbar.ui  SidebarRow.ui  SmartPlaylistCover.ui  SmartPlaylistWidget.ui  SongWidget.ui  TrackWidget.ui  app-menu.ui  application.css  gnome-music.1  gnome-music.appdata.xml.in  gnome-music.desktop.in  gnome-music.desktop.in.in  gnome-music.gresource.xml  gtk-style.css  headerbar.ui  headerbar.ui.in  help-overlay.ui  meson.build  (+13 more)
data/flatpak/: libmp4ff-shared-lib.patch  org.gnome.Music.json
data/icons/hicolor/: org.gnome.Music.blend
data/queries/: album_disc.rq  album_discs.rq  albums.rq  artist_albums.rq  artists.rq  playlist_add_song.rq  playlist_create.rq  playlist_delete.rq  playlist_delete_song.rq  playlist_query_all.rq  playlist_query_delete_entry.rq  playlist_query_playlist.rq  playlist_query_songs.rq  playlist_rename_title.rq  playlist_reorder_songs.rq  search_albums.rq  search_artists.rq  search_songs.rq  song.rq  songs.rq
data/tracker/: meson.build  org.gnome.Music.Miner.Extract.service  org.gnome.Music.Miner.Files.service  org.gnome.Music.Tracker3.Miner.Extract.service.in  org.gnome.Music.Tracker3.Miner.Files.service.in  org.gnome.Music.domain.rule  org.gnome.Music.domain.rule.in
data/ui/: #AlbumWidget.ui#  AboutDialog.ui.in  AlbumCover.ui  AlbumCoverListItem.ui  AlbumEditorDialog.ui  AlbumNavigationPage.ui  AlbumTile.ui  AlbumWidget.ui  AlbumWidget2.ui  AlbumsSearchNavigationPage.ui  AlbumsView.ui  AppMenu.ui  ArtistAlbumWidget.ui  ArtistAlbumsWidget.ui  ArtistNavigationPage.ui  ArtistSearchTile.ui  ArtistTile.ui  ArtistsSearchNavigationPage.ui  ArtistsView.ui  DiscBox.ui  DiscListItem.ui  DropDown.ui  EmptyView.ui  FilesView.ui  FilterView.ui  HeaderBar.ui  InfoBar.ui  InitialState.ui  LastfmDialog.ui  LinearPlaybackWidget.ui  LinearPlaybackWindow.ui  LoadingNotification.ui  NotificationsPopup.ui  PlaybackPopover.ui  PlayerToolbar.ui  PlaylistContextMenu.ui  PlaylistControls.ui  PlaylistDialog.ui  PlaylistDialogRow.ui  PlaylistNotification.ui  (+32 more)
gnome-music/: Makefile.am  Makefile.in  __init__.py  albumArtCache.py  application.py  grilo.py  player.py  query.py  toolbar.py  view.py  widgets.py  window.py
gnomemusic/: Makefile.am  __init__.py  about.py  albumArtCache.py  albumart.py  albumartcache.py  application.py  artcache.py  artistart.py  asynciolimiter.py  asyncqueue.py  corealbum.py  coreartist.py  coredisc.py  coregrilo.py  coremodel.py  coreselection.py  coresong.py  coverpaintable.py  defaulticon.py  embeddedart.py  errordialog.py  fileexistsasync.py  gnome-music.in  grilo.py  griloartqueue.py  gstplayer.py  inhibitsuspend.py  lastfm.py  mediaart.py  mediaartloader.py  mediakeys.py  mpris.py  musicbrainz.py  musiclogger.py  notification.py  notificationmanager.py  pauseonsuspend.py  player.py  playlists.py  (+26 more)
help/: LINGUAS  Makefile.am  meson.build
help/C/: create-playlist-via-album.page  index.page  introduction.page  lastfm.page  play-music.page  playlist-create-albums.page  playlist-create-artists.page  playlist-create-songs.page  playlist-delete.page  playlist-remove-songs.page  playlist-repeat.page  playlist-shuffle.page  search.page
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/gl/: gl.po
help/hr/: hr.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/kk/: kk.po
help/ko/: ko.po
help/nl/: nl.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sr/: sr.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
libgd/: Makefile.am
po/: LINGUAS  Makefile.in  Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  an.po  ar.po  as.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  (+40 more)
src/: Makefile.am  album-art-cache.vala  albumArtCache.js  app-menu.ui  application.js  application.py  clickable_label.js  contacts.gresource.xml  gnome-music.in  grilo.js  gtk-notification.c  gtk-notification.h  main.js  main.vala  models.js  music-album-info-box.vala  music-app.vala  music-browse-history.vala  music-clickable-label.vala  music-collection-view.vala  music-filtered-list.vala  music-list-store.vala  music-player.vala  music-playlist-songs.vala  music-playlist-view.vala  music-playlist.vala  music-searchbar.vala  music-topbar.vala  music-ui.vala  music-utils.vala  music.gresource.xml  org.gnome.Music.gschema.xml.in  package.js  player.js  query.js  searchbar.js  toolbar.js  view.js  widgets.js  window.js
src/resources/: app-menu.ui  gtk-style.css
subprojects/: grilo-plugins.wrap  grilo.wrap  shared-modules.wrap
subprojects/libgd/: .gitignore  Makefile.am  README  libgd.doap  libgd.m4  meson.build  meson_options.txt  meson_readme.md  test-tagged-entry-2.c  test-tagged-entry.c
subprojects/libgd/libgd/: gd-main-box.c  gd-main-icon-box-child.c  gd-main-icon-box.c  gd-types-catalog.c  gd.h  meson.build
tests/: Makefile.am  tests_albumArt.js  tests_albumPlayback.js  tests_artistsPlayback.js
(+106 files in other folders)
