@YELP_HELP_RULES@

HELP_ID = gnome-music

HELP_FILES = \
        introduction.page \
        index.page \
        playlist-create-albums \
        playlist-create-songs \
        playlist-create-artists \
        playlist-delete.page \
        playlist-remove-songs.page \
        search.page \
        legal.xml

HELP_MEDIA = \
        figures/gnome-music-3.12.png

HELP_LINGUAS = cs es hu
