@YELP_HELP_RULES@

HELP_ID = gnome-music

HELP_FILES = \
        introduction.page \
        index.page \
        play-music.page \
        playlist-create-albums.page \
        playlist-create-songs.page \
        playlist-create-artists.page \
        playlist-delete.page \
        playlist-remove-songs.page \
        search.page \
        legal.xml

HELP_MEDIA = \
        figures/gnome-music-3.12.png

HELP_LINGUAS = cs es fr hu pt_BR
