gnome.yelp(meson.project_name(),
  sources: [
    'introduction.page',
    'index.page',
    'lastfm.page',
    'play-music.page',
    'playlist-create-albums.page',
    'playlist-create-songs.page',
    'playlist-create-artists.page',
    'playlist-delete.page',
    'playlist-remove-songs.page',
    'playlist-repeat.page',
    'playlist-shuffle.page',
    'search.page',
    'legal.xml'
  ],
  media: 'figures/gnome-music-3.32.png'
)
